testsuite/serd-tests/good/test-nt-syntax-eof-after-blank-dot.nt
<http://example.org/s> <http://example.org/p> _:blank.