testsuite/serd-tests/bad/bad-eof-in-uri-scheme.nt
<http://example.org/s> <http://example.org/p> <ht